--- a/config/locales/translation_ja.yml
+++ b/config/locales/translation_ja.yml
@@ -6,6 +6,6 @@ ja:
     attributes:
       book:
         author: 著者  #g
-        memo: メモ  #g
+        memo: 概要 #g
         picture: 写真  #g
         title: 題名  #g
