--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -218,6 +218,7 @@ ja:
       title_show: "%{name}の詳細"
       sign_out: ログアウト
       minimum_length: "%{length}文字以上"
+      avatar: "アイコン"
     pagination:
       first: '最初'
       last: '最後'
@@ -233,8 +234,7 @@ ja:
     application:
       menu: メニュー
       sign_in_as: "%{email} としてログイン中"
-  # devise-i18n-viewsをオーバーライド
-  devise:
-    registrations:
-      edit:
-        title: "アカウント編集"
+    devise:
+      registrations:
+        edit:
+          title: "アカウント編集"
